tests/invalid/simple/VarDecl_CompileFail_2.whiley
int f(int x, int y) where x >=0 && y>0:
    int z
    z = x / y
    int z
    z = 1
    return z
